# a319-copilot

./: .gitignore  CMakeLists.txt  FindSpeechSDK.cmake  README.md  deploy.bat  deploy.sh
.github/workflows/: main.yml
src/: .clang-format  CMakeLists.txt  beforestartflow.cpp  beforestartflow.h  button.cpp  button.h  buttonclickedevent.h  cockpitpreparationflow.cpp  cockpitpreparationflow.h  command.cpp  command.h  copilot.cpp  copilot.h  dataref.h  flightloopprocessor.cpp  flightloopprocessor.h  flightstate.h  flowpage.cpp  flowpage.h  label.cpp  mainwindow.cpp  mainwindow.h  page.h  speechsynthesizer.cpp  speechsynthesizer.h  uipresenter.h  welcomepage.cpp  welcomepage.h  window.cpp  window.h  xplane.cpp
src/flows/: afterstartflow.cpp  afterstartflow.h  aftertakeoffflow.cpp  aftertakeoffflow.h  airplane.cpp  airplane.h  beforestartflow.cpp  beforestartflow.h  beforetakeoffflow.cpp  beforetakeoffflow.h  cockpitpreparationflow.cpp  cockpitpreparationflow.h  flow.h  flowstep.h  takeoffflow.cpp  takeoffflow.h  taxiflow.cpp  taxiflow.h
src/ui/: button.cpp  button.h  color.h  label.cpp  label.h  rectangle.cpp  rectangle.h  textarea.cpp  textarea.h  window.cpp  window.h
src/utils/: comhelper.h  cominstancecreationfailed.cpp  cominstancecreationfailed.h  command.h  dataref.cpp  dataref.h  flightloopprocessor.cpp  log.cpp  log.h  logentry.h  logwriter.cpp  logwriter.h
